role name department name

--- a/src/app/features/organisation-section/components/employee/employee.component.html
+++ b/src/app/features/organisation-section/components/employee/employee.component.html
@@ -50,8 +50,8 @@
       <td class="border p-2">{{ employee.user_email }}</td>
       <td class="border p-2">{{ employee.user_contact }}</td>
       <td class="border p-2">{{ employee.user_emergency_contact }}</td>
-      <td class="border p-2">{{ employee.role_id }}</td>
-      <td class="border p-2">{{ employee.department_id }}</td>
+      <td class="border p-2">{{ employee.role_name }}</td>
+      <td class="border p-2">{{ employee.department_name }}</td>      
       <td class="border p-2">{{ employee.is_passport ? 'Yes' : 'No' }}</td>
       <td class="border p-2">{{ employee.passport_validity|| 'NA' }}</td>
       <td class="border p-2">{{ employee.user_current_address }}</td>
